<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnviornmentDustControl</string>
    <string name="title_activity_create_pdf">CreatePdfActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_name">Create File</string>
    <string name="lbl_customer">Customer</string>
    <string name="lbl_supervisor">Supervisor</string>
    <string name="lbl_signature">Signature</string>
    <string name="lbl_require_signature">Signature Required</string>
    <string name="lbl_client">Client S/O P/O</string>
    <string name="lbl_location_number">Location Number</string>
    <string name="lbl_down_hole_location">Downhole Location</string>
    <string name="lbl_ar_edc_s_o">AR-EDC-S/O</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_job_start_time">Job Start Time</string>
    <string name="lbl_job_end_time">Job End Time</string>
    <string name="lbl_equipment_hrs_start">Equipment Hrs Start</string>
    <string name="lbl_equipment_hrs_end">Equipment Hrs End</string>
    <string name="lbl_accomodations">Accommodations</string>
    <string name="lbl_hogg">Hogg#</string>
    <string name="lbl_pailsofdust">Pails of Dust</string>
    <string name="lbl_add_signature">Add Signature</string>
    <string name="lbl_operator_01">Operator 1</string>
    <string name="lbl_operator_02">Operator 2</string>
    <string name="lbl_operator_03">Operator 3</string>
    <string name="lbl_operator_04">Operator 4</string>
    <string name="lbl_trailer">Trailer#</string>
    <string name="lbl_truck">Truck#</string>
    <string name="lbl_sub">Sub</string>
    <string name="lbl_bonus">Bonus</string>
    <string name="lbl_notes">Notes</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_save">Save</string>
    
    <!-- PDF Format String  -->
    <string name="customer_name">Customer %1$s</string>
    <string name="client_so_po">ClientS/OP/O %1$s</string>
    <string name="location_number">LocationNumber %1$s</string>
    <string name="downhole_location">Downhole Location %1$s</string>
    <string name="ar_edc_s_o">AR-EDC S/O %1$s</string>
    <string name="job_date">Date %1$s</string>
    <string name="job_start_time">Job Start Time %1$s</string>
    <string name="job_end_time">Job End Time %1$s</string>
    <string name="equipment_hrs_start">Equipment Hrs Start %1$s</string>
    <string name="equipment_hrs_end">Equipment Hrs End %1$s</string>
    <string name="accomodations">Accommadation %1$s</string>
    <string name="hogg">Hogg # %1$s</string>
    <string name="pailsofdust">Pails of Dust %1$s</string>
    <string name="operator_1">Operator 1 %1$s</string>
    <string name="operator_2">Operator 2 %1$s</string>
    <string name="operator_3">Operator 3 %1$s</string>
    <string name="operator_4">Operator 4 %1$s</string>
    <string name="notes">Notes %1$s</string>
    <string name="supervisor">Supervisor %1$s</string>
    
    <!-- dummy text here  -->
    <string name="dummy_please_wait">Please wait &#8230;</string>
</resources>